# chip8emulator

./: .pre-commit-config.yaml  README.md  devbox.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh  workspace-dictionary.txt
chip8emulator/: chip8emulator.py  decoder.py  graphics.py  keypad.py  memory.py  opcodes.py  processor.py
chip8emulator/types/: __init__.py  byte.py  nibble.py  word.py
tests/: test_byte.py  test_decoder.py  test_graphics.py  test_keypad.py  test_memory.py  test_nibble.py  test_processor.py  test_word.py
tests/roms/: 1-chip8-logo.txt  3-corax+.txt  4-flags.txt
