[tool.poetry]
name = "chip8emulator"
version = "0.1.0"
description = "An emulator of CHIP-8"
authors = ["manolo <mmartinortiz@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
chip8emulator = "chip8emulator.chip8emulator:main"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
arcade = "^2.6.17"

[tool.poetry.group.dev.dependencies]
tox = "^4"
pytest = "^7"
ruff = "^0"
pre-commit = "^3"
ipython = "^8.24.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=chip8emulator --cov-report=term-missing"
testpaths = "tests"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",  # Isort
]

[tool.ruff.lint.isort]
combine-as-imports = true
