[project]
name = "chip8emulator"
version = "0.1.0"
authors = [{ name = "Manuel", email = "mmartinortiz@gmail.com" }]
description = "An emulator of CHIP-8"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "arcade>=3.0.0-dev37",
  "bitarray>=3.0.0",
  "loguru>=0.7.2",
  "pyglet>=2.1.dev7",
]

[dependency-groups]
dev = [
  "ipython>=8.30.0",
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.1",
  "tox>=4.23.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chip8emulator"]

[project.scripts]
chip8emulator = "chip8emulator.chip8emulator:main"

[tool.pytest.ini_options]
addopts = "--cov=chip8emulator --cov-report=term-missing"
testpaths = "tests"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",  # Isort
]

[tool.ruff.lint.isort]
combine-as-imports = true
